tests/ui/slice_unsupported.stderr
error: unsupported &mut [T] element type: opaque C++ type is not supported yet
 --> tests/ui/slice_unsupported.rs:6:17
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
6 |         fn f(_: &mut [Opaque]);
  |                 ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)

error: needs a cxx::ExternType impl in order to be used as a slice element in &mut [Opaque]
 --> tests/ui/slice_unsupported.rs:4:9
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         type Opaque;
  |         ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
